--- a/index.html
+++ b/index.html
@@ -59,7 +59,40 @@
         .footer-logo {
             position: absolute; bottom: 20mm; right: 20mm;
             font-size: 14pt; font-weight: bold; color: #ccc;
-        }
+        } 
+
+                /* 화면 너비가 768px 이하(일반적인 모바일)일 때 적용 */
+        @media screen and (max-width: 768px) {
+            .page {
+                width: 100%;       /* 너비를 화면에 맞춤 */
+                height: auto;      /* 높이 제한 해제 */
+                padding: 20px;     /* 여백 조정 */
+                margin: 0;         /* 페이지 간 간격 제거 */
+                box-shadow: none;  /* 그림자 제거 */
+                display: block;    /* 가로 배치를 세로 배치로 변경 */
+            }
+
+            /* 1페이지 표지 수정 */
+            .cover-content {
+                flex-direction: column; /* 사진과 글을 위아래로 배치 */
+                text-align: center;
+                gap: 20px;
+            }
+            .profile-img {
+                width: 150px;      /* 사진 크기 축소 */
+                height: 150px;
+                border-radius: 50%; /* 모바일에서는 원형 사진이 깔끔함 */
+                box-shadow: 10px 10px 0px #1a3a5a;
+            }
+            .intro-text h1 { font-size: 30pt; }
+            
+            /* 2페이지 목차 수정 */
+            .contents-grid {
+                grid-template-columns: 1fr; /* 4열에서 1열로 변경 */
+            }
+}
+
+
     </style>
 </head>
 <body>
